# fid-rs

./: Cargo.toml  README.md  build.rs
benches/: bench.rs  new.rs  op.rs
examples/: size.rs
src/: bit_array.rs  bit_vector.rs  coding.rs  fid.rs  fid_iter.rs  lib.rs  tables.rs  util.rs
