[package]
name = "fid"
version = "0.1.7"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
description = "FID (Fully Indexable Dictionary) implementation for Rust"
repository = "https://github.com/ajalab/fid"
readme = "README.md"
homepage = "https://github.com/ajalab/fid"
documentation = "https://docs.rs/fid"
license = "MIT OR Apache-2.0"
keywords = ["fid", "bit-vector", "succinct"]
categories = ["data-structures"]
edition = "2021"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
mem_dbg = { version = "0.2", optional = true }
roxygen = "0.1"

[dev-dependencies]
rand = "0.5"
bincode = "1.1"
criterion = "0.5"

[build-dependencies]
indoc = "2"
distrs = "0.2"
roxygen = "0.1"

[features]
serde = ["dep:serde"]
mem_dbg = ["dep:mem_dbg"]

default = ["serde", "mem_dbg"]

[[bench]]
name = "op"
harness = false

[[bench]]
name = "new"
harness = false