[package]
name = "fid64-rs"
version = "0.1.2"
authors = ["TechPizza", "Koki Kato <koki.kato1994@gmail.com>"]
description = "FID (Fully Indexable Dictionary) with 64-bit indices in Rust"
repository = "https://github.com/TechPizzaDev/fid-rs"
readme = "README.md"
homepage = "https://github.com/TechPizzaDev/fid-rs"
documentation = "https://docs.rs/fid64-rs"
license = "MIT OR Apache-2.0"
keywords = ["fid", "bit-vector", "succinct"]
categories = ["data-structures"]
edition = "2021"

[lib]
name = "fid"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
mem_dbg = { version = "0.2", optional = true }
roxygen = "0.1"

[dev-dependencies]
rand = "0.5"
bincode = "1.3"
criterion = "0.5"

[features]
serde = ["dep:serde"]
mem_dbg = ["dep:mem_dbg"]

default = ["serde", "mem_dbg"]

[[bench]]
name = "op"
harness = false

[[bench]]
name = "new"
harness = false